--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <video autoplay muted playsinline>
-    <source src="video.mp4" type="video/mp4">
+    <source src="Eid Mubarak Status 2025.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
