--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: white;
+      color: yellow;
       font-size: 3em;
       font-weight: bold;
       text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
@@ -43,7 +43,8 @@
     Your browser does not support the video tag.
   </video>
 
-  <div class="overlay">Anas Javeed EID MUBARAK</div>
+  <div class="overlay">Anas Javeed</div>
 </body>
 </html>
+
 
