--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 </head>
 <body>
   <video autoplay muted playsinline>
-    <source src="Eid%20Mubarak%20Status%202025.mp4" type="video/mp4">
+    <source src="video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <div class="overlay">Anas Javeed</div>
+  <div class="overlay">Anas Javeed    EID   MUBARAK</div>
 </body>
 </html>
 
